tests/src/Loader/classloader/generics/Instantiation/Negative/param03.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_param03_param03_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param03_param03_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param03\\param03.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
